[package]
name = "cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
list-members = { path = "../list-members" }

color-eyre = "0.6"
envfury = "0.2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
twilight-http = "0.17"
